<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
        android:layout_height="wrap_content"

    android:gravity="center"
    android:orientation="vertical"
    android:padding="10dp">

    <ImageView
        android:id="@+id/bike_imageView_holder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:contentDescription="@string/bikeImage"
        tools:src="@tools:sample/avatars" />

    <View
        android:id="@+id/view3"
        android:layout_width="match_parent"
        android:layout_height="10dp" />

    <!-- bike name-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/name_of_bike"
            android:textStyle="bold" />


        <EditText
            android:id="@+id/enter_bike_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/textinputborder"
            android:inputType="none"
            android:autofillHints="bike name" />
    </LinearLayout>

        <View
            android:id="@+id/view2"
            android:layout_width="match_parent"
            android:layout_height="18dp" />

        <Spinner
            android:id="@+id/bike_type_spinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:spinnerMode="dialog" />

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="10dp" />

    <!-- Button to take picture of bike-->
    <Button
        android:id="@+id/start_camera_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/take_picture" />

    <View
        android:layout_width="wrap_content"
        android:layout_height="10dp" />
    <!-- Button to add bike-->
    <!-- bike name-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/price_per_hour"
            android:textStyle="bold" />


        <EditText
            android:id="@+id/enter_bike_price"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/textinputborder"
            android:inputType="numberDecimal"
            android:autofillHints="bike price" />
    </LinearLayout>

    <View
        android:id="@+id/view4"
        android:layout_width="match_parent"
        android:layout_height="10dp" />

        <Button
            android:id="@+id/add_bike_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_bike" />
</LinearLayout>
</ScrollView>