<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="10dp">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/bike_id"
                android:textStyle="bold" />


            <EditText
                android:id="@+id/bike_id_textview_start"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:enabled="false"
                android:inputType="none" />
        </LinearLayout>

        <!-- What bike -->

        <!-- Where does the ride start -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/start_location"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/start_location_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/textinputborder"
                android:enabled="false" />
        </LinearLayout>

        <Switch
            android:id="@+id/bluetooth_switch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Bluetooth" />

        <Button
            android:id="@+id/refresh_bluetooth_list_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Prepare unlocking" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Nearby bikes: "
            android:textStyle="bold" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/bluetooth_device_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <View
            android:layout_width="wrap_content"
            android:layout_height="20dp" />
        <!-- Button to add ride-->
        <Button
            android:id="@+id/add_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_ride" />

    </LinearLayout>
</ScrollView>
